# docRAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/docrag/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  generator.py  models.py  pipeline.py  retriever.py  scraper.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_generator.py  test_integration.py  test_pipeline.py  test_retriever.py  test_scraper.py
